--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div id="todoDayStr" class="bold f23"></div>
       <input type="hidden" name="todoDay" id="todoDay">
       <!-- <p style="color: #918f8f; margin-top: 5px; margin-bottom: 10px;">매일 해야하는 것 - 비타민 먹기, 방청소 하기</p> -->
-      <input id="todoInput" type="text" placeholder="메모를 작성하고 Enter를 눌러주세요." class="todo-input text-center">
+      <input id="todoInput" type="text" placeholder="📝메모를 작성하고 Enter를 눌러주세요." class="todo-input text-center">
     </div>
     <div class="todo left text-center">
       <span class="f17 bold">To Do List</span>
