--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
 
     <script src="js/keys.js"></script>
+    <script src="js/lunaToSolar.js"></script>
     <script src="js/calendar.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
