색상 추가중

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <span class="default-color annual" default-color="#d73737">연차</span>
         <span class="default-color travel" default-color="#0edd1c">여행</span>
       </div>
+      <div>선택 색상</div>
       <input type="color" id="event-color" value="#3788d8">
       <div>
         <button id="confirm-modal" class="btn">확인</button>
