이벤트 추가시 색상 추가중

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
   <div id="modal-area">
     <div class="modal_content">
+      <div id="modal-close">×</div>
       <h3 class="text-center">일정 등록</h3>
       <span>일정 </span><input type="input" id="event-content">
       <div id="color-area">
@@ -75,7 +76,7 @@
       <div>선택 색상</div>
       <input type="color" id="event-color" value="#3788d8">
       <div>
-        <button id="confirm-modal" class="btn">확인</button>
+        <button id="modal-confirm" class="btn">확인</button>
       </div>
     </div>
   </div>
