연차 색상 변경

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
   <div id="content-area">
-      <!-- 시간 -->
+    <!-- 시간 -->
     <div class="timeZone text-center">
       <div id="date" class="f18"></div>
       <div id="clock" class="f32 bold"></div>
@@ -67,10 +67,10 @@
     <div class="modal_content">
       <div id="modal-close">×</div>
       <h3 class="text-center">일정 등록</h3>
-      <span>일정 </span><input type="input" id="event-content">
+      <span>일정 </span><input type="input" id="event-content" placeholder="일정을 작성해주세요.">
       <div id="color-area">
         <span class="default-color default" default-color="#3788d8">기본</span>
-        <span class="default-color annual" default-color="#d73737">연차</span>
+        <span class="default-color annual" default-color="#e65656">연차</span>
         <span class="default-color travel" default-color="#0edd1c">여행</span>
       </div>
       <div>선택 색상</div>
