생일 색상 추가

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <span class="default-color default" default-color="#3788d8">기본</span>
         <span class="default-color annual" default-color="#e65656">연차</span>
         <span class="default-color travel" default-color="#0edd1c">여행</span>
+        <span class="default-color birthday" default-color="#00c7c7">생일</span>
       </div>
       <div>선택 색상</div>
       <input type="color" id="event-color" value="#3788d8">
