일정 편집 기능 추가

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
       </div>
       <div>선택 색상</div>
       <input type="color" id="event-color" value="#3788d8">
-      <div>
-        <button id="modal-confirm" class="btn">확인</button>
+      <div id="btn-area">
+        <button id="modal-confirm" class="btn modal-btn">확인</button>
+        <span id="empty-area" class="hide"></span>
+        <button id="modal-delete" class="btn modal-btn hide">삭제</button>
       </div>
     </div>
   </div>
